--- a/templates/base_filial.html
+++ b/templates/base_filial.html
@@ -34,11 +34,11 @@
               
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link text-white" href="/auth/logout/">logout </a>
+                <a class="nav-link text-white" href="/filial/logout/">logout </a>
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link text-white" href="/auth/send-otp/">Login </a>
+                <a class="nav-link text-white" href="/filial/login/">Login </a>
               </li>
               {% endif %}
               <li class="nav-item dropdown">
