--- a/templates/filial/filial-register.html
+++ b/templates/filial/filial-register.html
@@ -9,43 +9,48 @@
 <div class="auth-main">
     <div class="auth-wrapper v3">
       <div class="auth-form">
-
+        <form action="" method="post">
+          {% csrf_token %}
         <div class="card my-5">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-end mb-4">
-              <h3 class="mb-0"><b>Sign up</b></h3>
+              <h3 class="mb-0"><b>Filial Qo'shish</b></h3>
             </div>
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group mb-3">
-                  <label class="form-label">First Name*</label>
-                  <input type="text" class="form-control" placeholder="First Name">
+                  <label class="form-label">Phone Number</label>
+                  <input type="text" class="form-control" required  name="username" placeholder="Phone">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-3">
-                  <label class="form-label">Last Name</label>
-                  <input type="text" class="form-control" placeholder="Last Name">
+                  <label class="form-label">Password</label>
+                  <input type="password" class="form-control" name="password" required placeholder="password">
                 </div>
               </div>
             </div>
-            <div class="form-group mb-3">
-              <label class="form-label">Company</label>
-              <input type="text" class="form-control" placeholder="Company">
+           <div class="row">
+              <div class="col-md-6">
+                <div class="form-group mb-3">
+                  <label class="form-label">Filial Name</label>
+                  <input type="text" class="form-control" name="name" required  placeholder="Name">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-3">
+                  <label class="form-label">Filial Address</label>
+                  <input type="text" class="form-control" required name="address"  placeholder="Address">
+                </div>
+              </div>
             </div>
-            <div class="form-group mb-3">
-              <label class="form-label">Email Address*</label>
-              <input type="email" class="form-control" placeholder="Email Address">
-            </div>
-            <div class="form-group mb-3">
-              <label class="form-label">Password</label>
-              <input type="password" class="form-control" placeholder="Password">
-            </div>
+           
+            
          
             <div class="d-grid mt-3">
-              <button type="button" class="btn btn-primary">Create Account</button>
+              <button type="submit" class="btn btn-primary">Create Filiall</button>
             </div>
-
+          </form>
           </div>
         </div>
       </div>
