--- a/templates/indexold.html
+++ b/templates/indexold.html
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="product_active owl-carousel">
                         {% for product in group.products %}
-                        <div class="col-lg-3" style="height: auto; margin-bottom: 20px;">
+                        <div class="col-lg-3" style="height: auto;">
                             <div class="single_product">
                                 <div class="product_thumb">
                                     <a href="/product/detail/{{ product.id }}" style="margin: 0px !important;">
